--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>alim-portfolio</title>
+    <script>
+      document.documentElement.classList.add("dark");
+    </script>
   </head>
   <body>
     <div id="root"></div>
